[package]
name = "successlib"
version = "0.1.0"
edition = "2021"
description = "Core library for achieving goals, handles focus sessions, notes and sync"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
