[package]
name = "successlib"
version = "0.6.0"
edition = "2021"
description = "Core library for achieving goals, handles focus sessions, notes and sync"

[lib]
name = "successlib"
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = { version = "0.30.0", features = ["cli"] }
uniffi_bindgen = "0.30.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
